--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,3 @@
-<h1>Hello Kendo UI for Angular!</h1>
-<p>
-  <kendo-dropdownlist [data]="dropDownItems" [defaultItem]="defaultItem" textField="text" valueField="value" (valueChange)="handleFilterChange($event)" >
-  </kendo-dropdownlist>
-</p>
+<h1>Welkom in het informatieportaal!</h1>
 
-<p>
-  <kendo-grid [data]="gridItems | async" [pageSize]="pageSize" [skip]="skip" [pageable]="true"
-    (pageChange)="pageChange($event)" [sortable]="true" [sort]="sortDescriptor" (sortChange)="handleSortChange($event)"
-    [height]="400">
-    <kendo-grid-column field="ProductID" title="ID" width="50">
-    </kendo-grid-column>
-    <kendo-grid-column field="ProductName" title="Product Name">
-    </kendo-grid-column>
-    <kendo-grid-column field="Category.CategoryName" title="Category">
-    </kendo-grid-column>
-    <kendo-grid-column field="UnitPrice" title="Unit Price" width="140" format="{0:c}">
-    </kendo-grid-column>
-    <kendo-grid-column field="Discontinued" width="140" filter="boolean">
-      <ng-template kendoGridCellTemplate let-dataItem>
-        <input type="checkbox" [checked]="dataItem.Discontinued" disabled />
-      </ng-template>
-    </kendo-grid-column>
-  </kendo-grid>
-</p>
+<router-outlet></router-outlet>
