--- a/src/app/login-component/login.component.html
+++ b/src/app/login-component/login.component.html
@@ -1,7 +1,6 @@
 <p>Hier komt de login pagina!</p>
 
-U bent ingelogd: <b>{{ authService.isLoggedIn }}</b>
-<br><br>
+U bent ingelogd: <b>{{ authService.isLoggedIn }}</b> <br /><br />
 <button (click)="login()">Log in</button>
-<br><br>
+<br /><br />
 <a routerLink="/">Naar landingspagina</a>
